11426 - Implement RunningProcessInstance readers/writers (#11477)
* 11426 - Implement RunningProcessInstance readers/writers

* 11426 - Introduce repositories

* 11426 - Get rid of optional ImportRequestDto; rename createUpdateRequestDtoForProcessInstance to createUpsertRequestDtoForProcessInstance; revert createInstanceIndicesIfMissing implementation; remove unused methods from AbstractProcessInstanceWriterOS; make index repositories public; return String.format

* 11426 - Get rid of optional ImportRequestDto; rename createUpdateRequestDtoForProcessInstance to createUpsertRequestDtoForProcessInstance; revert createInstanceIndicesIfMissing implementation; remove unused methods from AbstractProcessInstanceWriterOS; make index repositories public; return String.format; fix waitUntilTaskIsFinished

* 11426 - Get rid of optional ImportRequestDto; rename createUpdateRequestDtoForProcessInstance to createUpsertRequestDtoForProcessInstance; revert createInstanceIndicesIfMissing implementation; remove unused methods from AbstractProcessInstanceWriterOS; make index repositories public; return String.format; fix waitUntilTaskIsFinished; rename Async to AsyncOperations

* 11426 - Get rid of optional ImportRequestDto; rename createUpdateRequestDtoForProcessInstance to createUpsertRequestDtoForProcessInstance; revert createInstanceIndicesIfMissing implementation; remove unused methods from AbstractProcessInstanceWriterOS; make index repositories public; return String.format; fix waitUntilTaskIsFinished; rename Async to AsyncOperations; rename IndexMappingCreatorEnum to IndexMappingCreatorBuilder

* 11426 - Index naming fix

* 11426 - Make IndexRepositories ConfigurationReloadable

* 11426 - Fix org.camunda.optimize.service.CamundaEventImportService.generateCompletedProcessInstanceImports

* 11426 - Get rid of AbstractProcessInstanceDataWriterOS and AbstractProcessInstanceWriterOS; Get rid of RunningProcessInstanceWriter; rename methods

---------

Co-author